--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
+name: Main Workflow
+
 on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
       - master
-
-name: Main Workflow
 
 jobs:
   sonarqube:
@@ -34,7 +34,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           curl -X GET -u "${SONAR_TOKEN}": -o sonarqube_measures.json '${{ secrets.SONAR_HOST_URL }}/api/measures/component_tree?additionalFields=metrics&ps=500&asc=false&metricSort=new_duplicated_lines_density&s=metricPeriod&metricSortFilter=withMeasuresOnly&metricPeriodSort=1&component=${{secrets.SONAR_PROJECT_KEY}}&metricKeys=new_duplicated_lines_density,new_line_coverage,code_smells,new_bugs,new_vulnerabilities,new_security_hotspots_reviewed&strategy=leaves'
-           cat sonarqube_measures.json
+          echo "::set-output name=measures::$(cat sonarqube_measures.json)"
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
@@ -64,22 +64,10 @@ jobs:
               Fecha: ${{ fromJson(steps.sonarqube_status.outputs.status).projectStatus.period.date }}
             Estado Cumple aunque y cuando (CAYC): ${{ fromJson(steps.sonarqube_status.outputs.status).projectStatus.caycStatus }}
 
-      - name: Block PR on SonarQube Analysis Failure
-        if: steps.sonarqube_status.outputs.status && fromJson(steps.sonarqube_status.outputs.status).projectStatus.status == 'ERROR'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "The SonarQube analysis failed. Blocking the PR..."
-          pr_number="${{ github.event.pull_request.number }}"
-          owner="${{ github.repository_owner }}"
-          repo="${{ github.repository }}"
-          response=$(curl -X POST -v \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/$owner/$repo/issues/$pr_number/lock" 2>&1)
-          echo "$response"
-          
-# Custom function to format the SonarQube measures with icons
+            Medidas SonarQube:
+            ${{ formatMetrics(fromJson(steps.sonarqube_measures.outputs.measures)) }}
+
+  # Custom function to format the SonarQube measures with icons
   formatMetrics:
     runs-on: ubuntu-latest
     outputs:
@@ -87,7 +75,7 @@ jobs:
     steps:
       - id: format_metrics
         env:
-          MEASURES_JSON: ${{ toJson(needs.sonarqube_measures.outputs.measures) }}
+          MEASURES_JSON: ${{ steps.sonarqube_measures.outputs.measures }}
         run: |
           metrics=$(echo $MEASURES_JSON | jq -r '.metrics')
           components=$(echo $MEASURES_JSON | jq -r '.components')
@@ -134,14 +122,15 @@ jobs:
           }
 
           # Iterate through components and format their measures
-          while IFS= read -r component; do
-            componentMeasures=$(echo "$components" | jq -r --argjson component "$component" '.[] | select(.key == $component) | .measures')
-            if [ "$componentMeasures" != "null" ]; then
-              componentName=$(echo "$component" | jq -r '.name')
-              echo "Componente: $componentName"
-              processMeasures "$componentMeasures"
-            fi
-          done <<< "$components"
+          for component in $(echo "$components" | jq -r '.[] | @base64'); do
+            _jq() {
+              echo ${component} | base64 --decode | jq -r ${1}
+            }
 
-          # Output the formatted metrics
-          echo "::set-output name=formattedMetrics::$formattedMetrics"
+            componentName=$(_jq '.name')
+            echo "Componente: $componentName"
+            componentMeasures=$(_jq '.measures')
+            processMeasures "$componentMeasures"
+          done
+
+          echo "::set-output name=formattedMetrics::$(cat sonarqube_measures.json)"
