--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,21 +28,23 @@ jobs:
           curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=Spuchifai'
           echo "status=$(cat quality-gate.json)" >> $GITHUB_ENV
 
-      - name: Comment PR with SonarQube Measures
+      - name: Get SonarQube Measures
+        id: sonarqube_measures
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONARQUBE_MEASURES: ${{ env.sonarqube_measures }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          comment=$(jq -r '.components | map("- 📊 Duplicated Lines Density: \(.measures[] | select(.metric == "new_duplicated_lines_density").period.value)\n  💡 Code Smells: \(.measures[] | select(.metric == "code_smells").value)\n  🐞 New Bugs: \(.measures[] | select(.metric == "new_bugs").period.value)\n  🛡️ New Vulnerabilities: \(.measures[] | select(.metric == "new_vulnerabilities").period.value)\n") | join("\n")' <<< "$SONARQUBE_MEASURES")
+          curl -X GET -u "${SONAR_TOKEN}": -o sonarqube_measures.json '${{ secrets.SONAR_HOST_URL }}/api/measures/component_tree?additionalFields=metrics&ps=500&asc=false&metricSort=new_duplicated_lines_density&s=metricPeriod&metricSortFilter=withMeasuresOnly&metricPeriodSort=1&component=${{secrets.SONAR_PROJECT_KEY}}&metricKeys=new_duplicated_lines_density,new_line_coverage,code_smells,new_bugs,new_vulnerabilities,new_security_hotspots_reviewed&strategy=leaves'
+          sonarqube_measures=$(cat sonarqube_measures.json)
+          echo "sonarqube_measures=${sonarqube_measures}" >> $GITHUB_ENV
 
-          if [ -z "$comment" ]; then
-            echo "No SonarQube measures found."
-            exit 0
-          fi
+      - name: Comment PR with SonarQube Measures
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            SonarQube Analysis Metrics:
 
-          echo "$comment"  # Show comment in the console
+            ${{ fromJson(env.SONARQUBE_MEASURES).components | map("- File: \(.name)\n  📊 Duplicated Lines Density: \(.measures[] | select(.metric == "new_duplicated_lines_density").period.value)\n  💡 Code Smells: \(.measures[] | select(.metric == "code_smells").value)\n  🐞 New Bugs: \(.measures[] | select(.metric == "new_bugs").period.value)\n  🛡️ New Vulnerabilities: \(.measures[] | select(.metric == "new_vulnerabilities").period.value)\n") | join("\n") | indent(4) }}
 
-          curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" -H "Content-Type: application/json" -d "{\"body\":\"SonarQube Analysis Metrics:\n\n$comment\"}" "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${{ github.event.pull_request.number }}/comments"
 
       - name: Block PR on SonarQube Analysis Failure
         if: env.status && fromJson(env.status).projectStatus.status == 'ERROR'
